# cpu-wavelet

./: .gitignore  CMakeLists.txt  README.md
apps/: cpu_batch_benchmark.cpp  cpu_benchmark.cpp  cpu_dwt.cpp
include/lifting/: cpu_transform.hpp  executor.hpp  indexing.hpp  plan.hpp  scheme.hpp  shifted_signal.hpp
lifting_schemes/: bior1.3.json  bior1.5.json  bior2.2.json  bior2.4.json  bior2.6.json  bior2.8.json  bior3.1.json  bior3.3.json  bior3.5.json  bior3.7.json  bior3.9.json  bior4.4.json  bior5.5.json  bior6.8.json  coif1.json  coif10.json  coif11.json  coif12.json  coif13.json  coif14.json  coif15.json  coif16.json  coif17.json  coif2.json  coif3.json  coif4.json  coif5.json  coif6.json  coif7.json  coif8.json  coif9.json  db10.json  db11.json  db12.json  db13.json  db14.json  db15.json  db16.json  db17.json  db18.json  (+63 more)
scripts/: build.sh
src/lifting/: cpu_transform.cpp  executor.cpp  plan.cpp  scheme_json.cpp
tests/: README.md
tests/data/: signals_short.json
tests/results/: accuracy.csv  accuracy_summary.md  performance.csv  performance_full.csv  pywt2d_cpu1d_performance.csv
tools/: generate_signals.py  plot_performance.py  run_accuracy.py  run_batch_performance.py  run_performance.py  run_pywt2d_vs_cpu1d.py  summarize_accuracy.py  sweep_thresholds.py
